tests/NormalTests/paczka1/small_fuzzy/74591830.err
Error in line 10: fLmw4PHsG A550 75,5
Error in line 12: A893 A893 55,0
